[project]
name = "10_x"
version = "0.0.0"
description = "CLI for 10x-ing your development process"
authors = [{name = "Christian Brown", email = "cjbrown822@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.urls]
Home = "https://10-x.christianjbrown.com"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
